added k8s manifests and updated readme file with troubleshooting file inclusion

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -8,11 +8,11 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # Pass API requests to the backend service
+    # Pass API requests to the K8s backend service
     location /api/ {
         # 'backend' is the service name from docker-compose.yml
         # '5001' is the port the Flask app runs on *inside* Docker
-        proxy_pass http://backend:5001; 
+        proxy_pass http://backend-service:5001; 
         
         # Standard proxy headers
         proxy_set_header Host $host;
