implemented IAC by terraform and eks files

--- a/k8s/3-backend-deployment.yaml
+++ b/k8s/3-backend-deployment.yaml
@@ -14,8 +14,8 @@ spec:
     spec:
       containers:
         - name: backend
-          image: backend-app:v1
-          imagePullPolicy: Never
+          image: 663789292765.dkr.ecr.us-east-1.amazonaws.com/backend-repository-k8s-3tier-app:v1
+          imagePullPolicy: Always
           ports:
             - containerPort: 5001
           env:
