--- a/k8s/3-backend-deployment.yaml
+++ b/k8s/3-backend-deployment.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: backend-deployment
 spec:
-  replicas: 2
+
   selector:
     matchLabels:
       app: backend
@@ -18,6 +18,13 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 5001
+          resources:
+            requests:
+              cpu: "100m"
+              memory: "128Mi"
+            limits:
+              cpu: "200m"
+              memory: "512Mi"
           env:
             - name: REDIS_HOST
-              value: "redis-0.redis-headless"
+              value: "redis-1.redis-headless"
